Actualiacion_V6 de archivos main.py y buscar.html

--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -215,7 +215,8 @@
         {% endif %}
     {% endmacro %}
 
-    {{ render_table("Base Hardware", hardware_result) }}
+    {{ render_table("Proyecto RANCO", proyecto_ranco_result) }}
+	{{ render_table("Base Hardware", hardware_result) }}
     {{ render_table("Export 5G", export_5g_result) }}
     {{ render_table("Export 4G", export_4g_result) }}
     {{ render_table("Export 3G", export_3g_result) }}
